--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,23 +1,33 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1" >
- 	<display-name>HotelSolutions</display-name>
- 		<welcome-file-list>
- 		<welcome-file>index.html</welcome-file>
- 		<welcome-file>index.htm</welcome-file>
-	 	<welcome-file>index.jsp</welcome-file>
- 		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-		<welcome-file>usuario.html</welcome-file>
-		</welcome-file-list>
- 	<servlet>
-<servlet-name>ControladorMostrarUsuario</servlet-name>
-<servlet-class>controladores.ControladorMostrarUsuario</servlet-class>
- </servlet>
- <servlet-mapping>
-<servlet-name>ControladorMostrarUsuario</servlet-name>
-<url-pattern>/MostrarUsuario</url-pattern>
- </servlet-mapping>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>HotelSolutions</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  
+  
+  <servlet>
+    <servlet-name>AgregarUsuarioController</servlet-name>
+    <servlet-class>controladores.AgregarUsuarioController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AgregarUsuarioController</servlet-name>
+    <url-pattern>/AgregarUsuarioController</url-pattern>
+  </servlet-mapping>
+  
+  
+    <servlet>
+    <servlet-name>MostrarUsuarioServlet</servlet-name>
+    <servlet-class>controladores.MostrarUsuarioServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MostrarUsuarioServlet</servlet-name>
+    <url-pattern>/MostrarUsuarioServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
